--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -20,11 +20,12 @@ Generally-speaking, you don't *need* to use any of the things below and can opt 
 - configure `supervisord` to be able to have django-celery automatically restart itself as needed; please refer to the sample files 'conf/supervisord.conf' and 'conf/celeryd.conf'
 - if you don't already have the Rainmap code, grab it via Subversion:
 
-    svn export --username=guest --pasword="" svn://svn.insecure.org/nmap-exp/rainmap/ rainmap
+    svn co --username=guest --pasword="" svn://svn.insecure.org/rainmap/ rainmap
 
-- we suggest you create `/var/local/rainmap/` and move `rainmap/src/public` and `rainmap/src/django` in this location
+- we suggest you create `/var/local/rainmap/` and move `rainmap/src/public` and `rainmap/src/django` in this location:
     - the `django/` folder contains the application logic
     - the `public/` folder contains static files
+    - symlink or move `$DJANGO/contrib/admin/media/` to `public/admin-media` (where $DJANGO is the folder where Django is installed in)
 - if you need help configuring Apache, Appendix B has a sample configuration file.
 - enable `mod_wsgi` by editing `/etc/httpd/conf.d/mod_wsgi.conf`. More information:
     - http://code.google.com/p/modwsgi/wiki/InstallationInstructions
